Improved test cases for domain classes