@@ -5,6 +5,7 @@ import org.example.logic.GameLogic;
 import org.example.domain.Deck;
 import org.example.domain.GameState;
 
+import java.util.ArrayList;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.concurrent.ThreadLocalRandom;
@@ -13,16 +14,16 @@ public class RandomCardStrategy implements CardMoveStrategy{
 
     @Override
     public boolean moveCard(GameState gameState, Deck deck) {
-        List<LinkedList<Card>> emptyPiles = gameState.getEmptyPiles();
-        List<LinkedList<Card>> movablePiles = gameState.getMovablePiles();
+        List<ArrayList<Card>> emptyPiles = gameState.getEmptyPiles();
+        List<ArrayList<Card>> movablePiles = gameState.getMovablePiles();
 
         if (emptyPiles.isEmpty() || movablePiles.isEmpty()) {
             return false;
         }
 
         int randomIndex = ThreadLocalRandom.current().nextInt(0, movablePiles.size());
-        emptyPiles.get(0).add(movablePiles.get(randomIndex).getLast());
-        movablePiles.get(randomIndex).removeLast();
+        emptyPiles.get(0).add(movablePiles.get(randomIndex).get(movablePiles.get(randomIndex).size() - 1));
+        movablePiles.get(randomIndex).remove(movablePiles.get(randomIndex).size() - 1);
 
         return true;
     }
